--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
  
       <div class="projects"> 
         <div class="item"> 
-          <img class="item__img" src="resurses/Rectangle 6.png" alt="/" /> 
+          <img class="item__img" src="resurses/Rectangle 6.png" alt="фото, слева гитара и диван" /> 
           <p class="item__title">ЖК ПРАВОБЕРЕЖНЫЙ — 112 м² — 2023</p> 
           <a class="item__li" href="">Подробнее →</a> 
         </div> 
       
           <div class="item"> 
-        <img class="item__img" src="resurses/Rectangle 7.png" alt="/" /> 
+        <img class="item__img" src="resurses/Rectangle 7.png" alt="гостинная. диван с плазмой и странные два столика" /> 
         <p class="item__title">ЖК НОРВЕЖСКИЙ ПАРК — 75 М² — 2023</p> 
         <a class="item__li" href="">Подробнее →</a> 
           </div> 
  
         <div class="item"> 
-        <img class="item__img" src="resurses/Rectangle 8.png" alt="" /> 
+        <img class="item__img" src="resurses/Rectangle 8.png" alt="Столовая. Стол со стульями и на заднем фоне лестница" /> 
         <p class="item__title">ЖК СОСНОВСКИЕ ОЗЕРА — 94 М² — 2022</p> 
         <a class="item__li" href="">Подробнее →</a> 
         </div> 
@@ -58,19 +58,19 @@
     <div class="block_service"> 
       <h3 class="text">УСЛУГИ</h3> 
       <div class="services"> 
-        <img class="container_img" src="resurses/Rectangle 2.png" alt="" /> 
+        <img class="container_img" src="resurses/Rectangle 2.png" alt="карандаш на чертежах" /> 
         <p class="service_p">Планировочное решение — от 2500₽/м²</p> 
       </div> 
       <div class="services"> 
-        <img class="container_img" src="resurses/Rectangle 3.png" alt="" /> 
+        <img class="container_img" src="resurses/Rectangle 3.png" alt="палитра цветов и оттенков" /> 
         <p class="service_p">Дизайн-проект — от 3000₽/м²</p> 
       </div> 
       <div class="services"> 
-        <img class="container_img" src="resurses/Rectangle 4.png" alt="" /> 
+        <img class="container_img" src="resurses/Rectangle 4.png" alt="руки чертящие макет на листе" /> 
         <p class="service_p">Авторский надзор — от 30 000₽ в месяц</p> 
       </div> 
       <div class="services"> 
-        <img class="container_img" src="resurses/Rectangle 5.png" alt="" /> 
+        <img class="container_img" src="resurses/Rectangle 5.png" alt="фото склада" /> 
         <p class="service_p">Комплектация — 5% от стоимости спецификации</p> 
       </div> 
     </div> 
